--- a/templates/create_note.html
+++ b/templates/create_note.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <title>Create Note</title>
-</head>
 <body>
-    <h1>Create Note</h1>
+    <h2>Create Note</h2>
     <form action="/create-note" method="post">
         <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required><br>
+        <input type="text" id="title" name="title"><br><br>
         <label for="description">Description:</label>
-        <textarea id="description" name="description" required></textarea><br>
-        <input type="submit" value="Create Note">
+        <textarea id="description" name="description"></textarea><br><br>
+        <button type="submit">Create</button>
     </form>
-    <a href="/">Back to Login</a>
+    <a href="/notes">Back to Notes</a>
 </body>
 </html>
