--- a/templates/edit_note.html
+++ b/templates/edit_note.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <title>Edit Note</title>
-</head>
 <body>
-    <h1>Edit Note</h1>
-    <form action="/edit-note/{{ note_id }}" method="post">
+    <h2>Edit Note</h2>
+    <form action="/edit-note/{{ note.id }}" method="post">
         <label for="title">Title:</label>
-        <input type="text" id="title" name="title" value="{{ note.title }}" required><br>
+        <input type="text" id="title" name="title" value="{{ note.title }}"><br><br>
         <label for="description">Description:</label>
-        <textarea id="description" name="description" required>{{ note.description }}</textarea><br>
-        <input type="submit" value="Update Note">
+        <textarea id="description" name="description">{{ note.description }}</textarea><br><br>
+        <button type="submit">Update</button>
     </form>
-    <a href="/">Back to Login</a>
+    <a href="/notes">Back to Notes</a>
 </body>
 </html>
