--- a/templates/login.html
+++ b/templates/login.html
@@ -4,13 +4,27 @@
     <title>Login</title>
 </head>
 <body>
-    <h1>Login</h1>
-    <form action="/login" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br>
-        <input type="submit" value="Login">
+    <h2>Login</h2>
+    {% if error %}
+        <p style="color: red;">{{ error }}</p>
+    {% endif %}
+    <form method="post" action="/login">
+        <label>Username:</label>
+        <input type="text" name="username" required><br>
+        <label>Password:</label>
+        <input type="password" name="password" required><br>
+        <button type="submit">Login</button>
+    </form>
+
+    <hr>
+
+    <h2>Register</h2>
+    <form method="post" action="/register">
+        <label>Username:</label>
+        <input type="text" name="register_username" required><br>
+        <label>Password:</label>
+        <input type="password" name="register_password" required><br>
+        <button type="submit">Register</button>
     </form>
 </body>
 </html>
