--- a/templates/main.html
+++ b/templates/main.html
@@ -1,27 +1,18 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <title>Notes</title>
-</head>
 <body>
-    <h2>Notes</h2>
-    <a href="/create-note">Create New Note</a>
-    <form action="/logout" method="post">
-        <button type="submit">Logout</button>
-    </form>
+    <h2>Your Notes</h2>
     <ul>
-        {% for note in notes %}
-            <li>
-                <h3>{{ note.title }}</h3>
-                <p>{{ note.description }}</p>
-                <form action="/edit-note/{{ loop.index0 }}" method="post">
-                    <button type="submit">Edit</button>
-                </form>
-                <form action="/delete-note/{{ note.id }}" method="post">
-                    <button type="submit">Delete</button>
-                </form>
-            </li>
-        {% endfor %}
+    {% for note in notes %}
+        <li>{{ note.title }} - {{ note.description }} ({{ note.created_at }})
+        <a href="/edit-note/{{ note.id }}">Edit</a>
+        <form action="/delete-note/{{ note.id }}" method="post" style="display:inline;">
+            <button type="submit">Delete</button>
+        </form>
+        </li>
+    {% endfor %}
     </ul>
+    <a href="/create-note">Create New Note</a>
+    <br>
+    <a href="/logout">Logout</a>
 </body>
 </html>
